@@ -1,0 +1,1 @@
+implementation-class=org.ysb33r.gradle.gradletest.GradleTestBasePlugin
